--- a/index.html
+++ b/index.html
@@ -23,24 +23,30 @@
     <section class="contact">
       <h3 class="">CONTACTO</h3>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi
-        laudantium autem deserunt assumenda aliquam quo, reiciendis ipsa iste
-        molestiae nobis, qui, delectus dolor beatae laborum quibusdam! Impedit
-        neque adipisci iusto?
+        <strong>Email:</strong> jessica.soledispa@uees.edu.ec
+        <br><strong>Dirección:</strong>  Norte de la ciudad
       </p>
-      <h3 class="titulo-rosado">HABILIDADES</h3>
+      <h3 class="titulo-rosado">HABILIDADES BLANDAS</h3>
       <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde ea neque
-        error. Exercitationem quis, praesentium ipsa sequi modi, repudiandae
-        quia quisquam labore ipsam qui dolorum architecto minus laborum. Autem,
-        saepe.
+        <strong>Liderazgo</strong> Habilidad para inspirar, guiar y motivar a
+        otros en un ambiente de trabajo. <br /><strong
+          >Pensamiento crítico</strong
+        >
+        Capacidad para analizar información, reflexionar sobre ella y tomar
+        decisiones informadas. <br /><strong>Creatividad</strong> Capacidad para
+        pensar fuera de lo común y generar ideas innovadoras.
       </p>
       <h3 class="titulo-naranja">CURSOS</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
-        inventore veritatis ducimus a ea. Est deleniti sequi dolor, ducimus ab
-        voluptatibus? Eveniet aliquid porro sit reprehenderit, et explicabo
-        temporibus veritatis.
+        <strong>Lenguajes de Programación:</strong> Python, JavaScript, C++, Java, SQL
+        <br><strong>Frameworks y Herramientas:</strong> React, Node.js, Express, Django, Flask,
+        Angular Bases de Datos: MySQL, PostgreSQL, MongoDB 
+        <br><strong>Desarrollo Web:</strong>
+        HTML5, CSS3, JavaScript (ES6+), Bootstrap, jQuery 
+        <br><strong>Control de Versiones:</strong>
+        Git, GitHub, GitLab
+        <br><strong>Herramientas de Desarrollo:</strong>
+         Visual Studio Code, PyCharm, IntelliJ IDEA
       </p>
       <h3 class="titulo-verde">REFERENCIAS</h3>
       <p>
@@ -53,6 +59,10 @@
     <article>
       <h3 class="">PERFIL</h3>
       <h3 class="">EDUCACIÓN</h3>
+      <p>
+        <strong>Universidad Espíritu Santo</strong>Ultimos semestre <br>
+        Ingeniería en Computación 
+      </p>
       <h3 class="">EXPERIENCIA LABORAL</h3>
     </article>
 
